# NMT

./: .gitignore  LICENSE  NMT.ipynb  config.py  first_logger.py  model_embedding.py  pyproject.toml  rnn.py  vocab.py
JAX Tutorials/: jax_basics.ipynb  jax_lax_scan.ipynb  jax_mnist.ipynb
Tensor Visualization/: tensor_visualize.ipynb
