[project]
name = "nmt"
version = "0.1.0"
description = "Neural machine translation experiments and utilities."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.0.0",
    "jax>=0.10.2",
    "jax-mps>=0.10.8; sys_platform == 'darwin'",
    "numpy>=2.4.6",
    "sentencepiece>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
